# opencompany

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.dev.yml  docker-compose.yml  todo.txt
.cargo/: config.toml
.do/: app.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
companies/: README.md
companies/agentic_accounting_firm/: README.md  company.toml
companies/agentic_consultation_firm/: README.md  company.toml
companies/agentic_customer_support/: README.md  company.toml
companies/agentic_design_studio/: README.md  company.toml
companies/agentic_enterprise_sales/: README.md  company.toml
companies/agentic_game_business/: README.md  company.toml
companies/agentic_game_studio/: README.md  company.toml
companies/agentic_influencer_business/: README.md  company.toml
companies/agentic_law_firm/: README.md  company.toml
companies/agentic_marketing_agency/: README.md  company.toml
companies/agentic_media_company/: README.md  company.toml
companies/agentic_pharma_startup/: README.md  company.toml
companies/agentic_realestate_company/: README.md  company.toml
companies/agentic_recruiting_company/: README.md  company.toml
companies/agentic_software_company/: README.md  company.toml
companies/agentic_venture_capital/: README.md  company.toml
companies/agentic_venture_studio/: README.md  company.toml
companies/e2e_harness/: README.md  company.toml
companies/openhuman_demo/: README.md  company.toml
companies/signals_opportunity_studio/: README.md  company.toml
companies/startup_accelerator/: README.md  company.toml
deploy/: README.md  aws-ecs-task-definition.json
docker/: entrypoint.sh
docs/modules/: mcp.md
docs/plans/: 03-ports-and-rest-writes.md  09-verification.md
docs/spec/: Agentic_Venture_Incubator_Spec.md  README.md  glossary.md  roadmap.md
docs/specs/: 01-parsers.md  02-graphql-reads.md  04-openhuman-harness.md  05-usage-finances.md  06-connections-domain-email.md  07-frontend-wiring.md  08-company-content.md  README.md
examples/: README.md  basic_server.rs  live_company_turn.rs
examples/agentic_accounting_firm/: Cargo.toml  README.md  agents.toml
examples/agentic_consultation_firm/: Cargo.toml  README.md  agents.toml
examples/agentic_customer_support/: Cargo.toml  README.md
examples/agentic_design_studio/: Cargo.toml  README.md  agents.toml
examples/agentic_enterprise_sales/: Cargo.toml  README.md  agents.toml
examples/agentic_game_business/: Cargo.toml  README.md
examples/agentic_game_studio/: Cargo.toml  README.md  agents.toml
examples/agentic_influencer_business/: Cargo.toml  README.md  agents.toml
examples/agentic_law_firm/: Cargo.toml  README.md  agents.toml
examples/agentic_marketing_agency/: Cargo.toml  README.md  agents.toml
examples/agentic_media_company/: Cargo.toml  README.md
examples/agentic_pharma_startup/: Cargo.toml  README.md
examples/agentic_realestate_company/: Cargo.toml  README.md
examples/agentic_recruiting_company/: Cargo.toml  README.md
examples/agentic_software_company/: Cargo.toml  README.md
examples/agentic_venture_capital/: Cargo.toml  README.md  agents.toml
examples/agentic_venture_studio/: Cargo.toml  README.md
examples/console/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
examples/signals_opportunity_studio/: Cargo.toml  README.md  agents.toml
examples/signals_opportunity_studio/src/: main.rs
examples/startup_accelerator/: Cargo.toml  README.md
frontend/: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/nginx/: default.conf.template
frontend/src/: App.tsx  config.ts  index.css  main.tsx  vite-env.d.ts
gitbooks/: README.md  SUMMARY.md
gitbooks/developers/: README.md  architecture.md  cli.md  companies.md  configuration.md  deployment.md  quickstart.md
gitbooks/get-started/: pricing.md  quickstart.md  your-first-company.md
gitbooks/overview/: company-of-one.md  medulla.md  tiny-place.md  what-you-can-run.md  why-it-works.md
scripts/: launch-demo.sh  list-demos.sh  run-demo-backend.sh  test-launch-demo.sh
scripts/lib/: demos.sh
skills/: README.md
skills/changelog-writer/: SKILL.md
skills/cold-outreach/: SKILL.md
skills/competitor-scan/: SKILL.md
skills/customer-followup/: SKILL.md
skills/deal-memo/: SKILL.md
skills/expense-report/: SKILL.md
skills/hiring-screen/: SKILL.md
skills/invoice-drafting/: SKILL.md
skills/landing-page/: SKILL.md
skills/meeting-brief/: SKILL.md
skills/seo-audit/: SKILL.md
skills/social-calendar/: SKILL.md
skills/web-research/: SKILL.md
skills/weekly-report/: SKILL.md
src/: error.rs  lib.rs
src/app/: config.rs  doctor.rs  mod.rs  types.rs
src/brain/: echo.rs  hosted.rs  mod.rs
src/company/: content_test.rs  dns.rs  inference.rs  manifest.rs  mcp.rs  mcp_oauth.rs  mod.rs  runtime.rs  skill_file.rs  telegram.rs  types.rs  workflow_file.rs  workspace_seed.rs
src/economy/: adapter.rs  card.rs  client.rs  mod.rs  outbox.rs  signer.rs  siwx.rs  x402.rs
src/feedback/: github.rs  labels.rs  mod.rs  scrub.rs  service.rs  store.rs  tinyhumans.rs  tool.rs  triage.rs  types.rs
src/harness/: brain.rs  build.rs  cost.rs  mcp.rs  mcp_probe.rs  memory.rs  memory_loop.rs  mod.rs  orchestrator.rs  policy.rs  provider.rs  skills.rs  steps.rs
src/metering/: calendar.rs  finances.rs  mod.rs  types.rs  usage.rs
src/openhuman/: channel.rs  http_client.rs  launcher.rs  mod.rs  rpc.rs  tools.rs
src/policy/: gate.rs  mod.rs
src/ports/: approvals.rs  brain.rs  channel.rs  context.rs  economy.rs  events.rs  facts.rs  ids.rs  inbox.rs  login_codes.rs  memory.rs  mod.rs  secrets.rs  sessions.rs  skills_state.rs  store.rs  tasks.rs  tools.rs  types.rs  usage.rs  users.rs  workflow_runner.rs  workspace.rs
(+384 files in other folders)
