[workspace]
members = ["examples/*"]
# Keep the default build small: a bare `cargo build` compiles only the host.
# Build the harnesses explicitly with `cargo build --workspace` or `-p <name>`.
default-members = ["."]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/tinyhumansai/opencompany"

# Shared dependency each example harness inherits from the parent crate.
[workspace.dependencies]
opencompany = { path = "." }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package]
name = "opencompany"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Company operating system scaffold built on OpenHuman and TinyHumans Rust modules."
readme = "README.md"
keywords = ["company", "agents", "openhuman", "tinyagents", "axum"]
categories = ["web-programming", "asynchronous"]
# Each example is a standalone workspace member crate, not a bare-file example
# target of the host crate.
autoexamples = false

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

tinyagents = { path = "vendor/tinyagents", optional = true, features = ["sqlite", "repl"] }

# Optional network client shared by the feature-gated integrations below; the
# default build links no network crates.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[features]
default = []
tiny = ["tinyagents"]
# Real HTTP transport to openhuman-core. The trait + offline mock + providers
# compile without this; only `HttpOpenHumanRpc` is gated behind it.
openhuman-rpc = ["dep:reqwest"]
# Real GitHub REST filer for feedback issues. The `GitHubClient` trait + offline
# mock + the whole filing flow compile without this; only `HttpGitHubClient` is
# gated behind it.
github = ["dep:reqwest"]
# Real HTTP/Socket.IO transport to hosted Medulla. The wire types + offline
# MockTransport compile without this; only the networked transport is gated.
medulla = ["dep:reqwest"]

[patch.crates-io]
tinyagents = { path = "vendor/tinyagents" }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
