[workspace]
# The host is the single configurable backend. Business types are data-only
# definitions under companies/ (a company.toml manifest + docs), loaded at
# runtime via `opencompany serve --company companies/<name>` — not Cargo crates.
# The operator console is a Vite/TypeScript app under frontend/.
members = ["."]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/tinyhumansai/opencompany"

# Shared dependency each example harness inherits from the parent crate.
[workspace.dependencies]
opencompany = { path = "." }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package]
name = "opencompany"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Company operating system scaffold built on OpenHuman and TinyHumans Rust modules."
readme = "README.md"
keywords = ["company", "agents", "openhuman", "tinyagents", "axum"]
categories = ["web-programming", "asynchronous"]
# Each example is a standalone workspace member crate, not a bare-file example
# target of the host crate.
autoexamples = false

# Live end-to-end smoke for issue #9: one company agent on the embedded
# OpenHuman runtime, one turn against the hosted brain. Needs a credential, so
# it is an explicit example gated on the `openhuman` feature — never built by
# the default `cargo build`/CI.
[[example]]
name = "live_company_turn"
path = "examples/live_company_turn.rs"
required-features = ["openhuman"]

[dependencies]
async-graphql = "7"
async-graphql-axum = "7"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Static file serving for the embedded operator console. `ServeDir`/`ServeFile`
# back the `/` SPA fallback so a hosted tenant serves its own console
# same-origin without a separate nginx container. Unconditional but inert: the
# fallback is only mounted when `OPENCOMPANY_CONSOLE_DIR` points at a real
# directory, so the default build's behavior is byte-for-byte unchanged. Pure
# Rust, no system libs, no network.
tower-http = { version = "0.6", features = ["fs"] }
# `ServiceExt::oneshot` lets the `/` SPA fallback hand a request off to
# `ServeDir` from inside an axum handler, so reserved server prefixes can 404
# before the static service ever sees them. Already in the tree via `tower-http`
# and `axum`, so this is a direct-use declaration, not new compilation.
tower = { version = "0.5", features = ["util"] }

tinyagents = { path = "vendor/tinyagents", optional = true, features = ["sqlite", "repl"] }

# WS4: openhuman embedded as a library (the harness). Only links under the
# `openhuman` feature; the default build pulls none of this enormous native
# dependency tree. `default-features = false` sheds openhuman's whole default
# set — `tokenjuice-treesitter`, `voice`, `web3`, `media`, `meet`,
# `flows` — none of which a company agent needs; it wants the agent
# loop, memory, and an inference provider. `mcp` is re-enabled (issue #50):
# per-tenant MCP tool servers reuse OpenHuman's `mcp_client` registry + HTTP
# transport + injection-safety filter and the `mcp_list_servers` /
# `mcp_list_tools` / `mcp_call_tool` bridge tools. Upstream `mcp = []` carries
# no extra crates — it only recompiles the MCP client/registry modules.
# `skills` is re-enabled: cell #28
# surfaces a company's effective skill set to its harness agents through
# OpenHuman's own skill *read* tools (`list_workflows` / `describe_workflow` /
# `read_workflow_resource`), which live in the gated `openhuman::skills`
# domain. The feature carries no extra deps (`skills = []` upstream) — it only
# recompiles the skills domain modules. Keep `vendor/tinyagents` on the
# same commit openhuman's own `vendor/tinyagents` pins: the two are a
# lockstep pair, and a skew fails to compile (only under this feature, which
# CI does not build).
openhuman_core = { package = "openhuman", path = "vendor/openhuman", optional = true, default-features = false, features = ["skills", "mcp"] }
# The openhuman `Provider`/`Memory` traits return `anyhow::Result` and log via
# the `log` facade; both only link under the `openhuman` feature.
anyhow = { version = "1", optional = true }
log = { version = "0.4", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
# Console MCP OAuth (issue #90): base64url for PKCE (S256 challenge + verifier
# entropy) and URL building for the `/authorize` redirect. Both are already in
# the tree via `openhuman_core` + `reqwest`, so pinning them as direct deps adds
# no new Cargo.lock entries; they link only under the `mcp` feature.
base64 = { version = "0.22", optional = true }
url = { version = "2", optional = true }

# Issue #29 (epic #26): the tinyflows workflow engine, embedded directly. It is
# host-agnostic and Config-free — `Capabilities` is a plain struct of trait
# objects — so a company's workflows run on it without booting any OpenHuman
# global `Config`/registry. Only links under the `openhuman` feature; the
# `[patch.crates-io]` entry below already redirects it at the vendored copy
# (`vendor/openhuman/vendor/tinyflows`, 0.5.x). Its `tinyagents ^1.2` requirement
# resolves to the already-vendored `vendor/tinyagents`, so this adds no new
# lockstep.
# We deliberately do NOT enable openhuman's own `flows` feature: that drags in
# rhai + the builder tools, defeating the point of running tinyflows directly.
tinyflows = { version = "0.5", optional = true }

# Optional network client shared by the feature-gated integrations below; the
# default build links no network crates.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

# Real HMAC-SHA256 webhook signing. Pure-Rust, no system libs, no network beyond
# the shared `reqwest` client used by `HttpWebhookSink`.
hmac = { version = "0.12", optional = true }

# Hashing (session/login-code digests) and OS randomness (minting them). Both
# are unconditional: a build that cannot hash or generate a random token cannot
# authenticate a human, and user auth is not an optional surface. Both are
# pure-Rust and offline — `getrandom` is a syscall shim — so the "default build
# links no network crates" invariant is untouched. Feature-gating them instead
# would push `#[cfg]` through StorageHandles, three backends, and the
# conformance suite to defend nothing.
sha2 = "0.10"
getrandom = "0.2"

# Argon2id password hashing. Unconditional for the same reason as sha2: a build
# that cannot verify a password cannot log a human in. Pure-Rust RustCrypto, no
# system libs, no network. `default-features = false` + "alloc"/"password-hash"
# drops argon2's own RNG feature — salts come from the crate's TokenSource seam
# instead, so there is one source of randomness rather than two.
argon2 = { version = "0.5", default-features = false, features = [
    "alloc",
    "password-hash",
] }

# Real signed per-tenant JWT verification for platform auth.
jsonwebtoken = { version = "9", optional = true }

# SQLite-backed implementations of the storage ports. The `bundled` feature
# vendors SQLite into the build, so no system libsqlite3 is required and the
# compile stays fully offline. Only links under the `sqlite` feature.
rusqlite = { version = "0.40", features = ["bundled"], optional = true }

# MongoDB-backed implementations of the storage ports (official async driver).
# Only links under the `mongodb` feature; the default build stays offline.
mongodb = { version = "3", optional = true }

# Single-file `.tar` packing/unpacking for `opencompany export`/`import`. Pure
# Rust, no system libs, no network. Only links under the `export` feature; the
# port-driven bundle core works on an unpacked directory without it.
tar = { version = "0.4", optional = true }

# Recursive DNS resolution for custom-domain verification. Only links under the
# `dns` feature; the `DnsResolver` trait + offline `StaticDnsResolver` compile
# without it.
hickory-resolver = { version = "0.24", optional = true }

# SMTP outbound transport for the test-send and per-teammate outbound mail. Only
# links under the `smtp` feature; the `MailSender` trait + offline mock compile
# without it. Pure-Rust rustls TLS so no system libs are required.
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"], optional = true }

# Offline crypto for the tiny.place economy identity. All three are optional and
# only link under the `tinyplace` feature; the default build pulls none of them.
# `rand_core`'s `getrandom` feature provides `OsRng` for seed generation; we call
# `SigningKey::from_bytes` so dalek's own `rand_core` feature stays off.
ed25519-dalek = { version = "2", default-features = false, features = ["std"], optional = true }
bs58 = { version = "0.5", default-features = false, features = ["std"], optional = true }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"], optional = true }

[features]
default = []
tiny = ["tinyagents"]
# WS4: embed `vendor/openhuman` (`openhuman_core`) directly as the tenant agent
# harness via `AgentBuilder`. `src/harness/` compiles only under this feature;
# the default build stays offline and echo-brained (byte-for-byte unaffected).
# `reqwest` is pulled in for the hosted Medulla inference `Provider`; the
# `MockProvider` and every adapter compile without touching the network.
openhuman = ["dep:openhuman_core", "dep:reqwest", "dep:anyhow", "dep:log", "dep:tinyflows"]
# MCP server management and agent tools share OpenHuman's in-process registry.
# Enabling it necessarily enables the embedded harness and OpenHuman MCP
# domain, while the default build remains unchanged.
mcp = ["openhuman", "openhuman_core/mcp", "dep:uuid", "dep:base64", "dep:url"]
# Real HTTP transport to openhuman-core. The trait + offline mock + providers
# compile without this; only `HttpOpenHumanRpc` is gated behind it.
openhuman-rpc = ["dep:reqwest"]
# Real GitHub REST filer for feedback issues. The `GitHubClient` trait + offline
# mock + the whole filing flow compile without this; only `HttpGitHubClient` is
# gated behind it.
github = ["dep:reqwest"]
# Real HTTP forwarding of feedback to the TinyHumans hub, so a provisioned
# instance records reports against its credential's owner. The
# `TinyHumansClient` trait + offline mock + the whole routing decision compile
# without this; only `HttpTinyHumansClient` is gated behind it.
tinyhumans = ["dep:reqwest"]
# Real HTTP/Socket.IO transport to hosted Medulla. The wire types + offline
# MockTransport compile without this; only the networked transport is gated.
medulla = ["dep:reqwest"]
# tiny.place economy: Ed25519 identity, SIWX auth, x402 payment authorization,
# and (in later batches) the HTTP transport. Card projection + wire types stay
# in the default build; only crypto and the networked client are gated here.
tinyplace = ["dep:reqwest", "dep:ed25519-dalek", "dep:bs58", "dep:rand_core"]
# Real HTTP POST webhook delivery + HMAC-SHA256 signing. The `WebhookSink` trait,
# the offline `RecordingWebhookSink`, and the deterministic default signer
# compile without this; only `HttpWebhookSink`/`HmacSha256Signer` are gated here.
webhooks = ["dep:reqwest", "dep:hmac"]
# Real signed per-tenant JWT verification. The `PlatformVerifier` trait and the
# offline `StaticPlatformVerifier` compile without this; only the JWT verifier is
# gated behind it.
platform-jwt = ["dep:jsonwebtoken"]
# SQLite-backed storage ports (CompanyStore/EventLog/MemoryStore/ContextStore
# plus SecretStore) sharing one bundled connection. The fs stores and the
# port-conformance suite compile without this; only `SqliteStore` is gated here.
sqlite = ["dep:rusqlite"]
# MongoDB-backed storage ports (CompanyStore/EventLog/MemoryStore/ContextStore
# plus SecretStore) sharing one database handle — the multi-tenant platform
# backend: every document is keyed by company_id and the hosting layer gives
# each tenant its own database on a shared cluster. The fs stores and the
# port-conformance suite compile without this; only `MongoStore` is gated here.
mongodb = ["dep:mongodb"]
# TinyCortex-backed MemoryStore + ContextStore over a mockable CortexClient.
# TinyCortex itself is not vendored, so this feature adds no dependency: the
# compiled backend is an offline in-memory client and the real HTTP client is
# inert until the service is reachable through the OpenHuman seam. The fs stores
# and the port-conformance suite compile without this.
tinycortex = []
# Node sidecar brain for self-hosters (bring-your-own-inference). Adds
# `SidecarBrain`, which speaks the same `/orchestration/v1` wire frames as the
# hosted brain but against a local sidecar process, with inference routed back
# into the Rust host through an `InferenceClient`. Process launch uses the
# already-enabled tokio `process` feature and real inference rides the existing
# `tiny` feature, so this flag adds no dependency. The whole brain, its mocks,
# and the offline end-to-end test are gated here; the default build links none
# of it and the builder routes `sidecar` mode to the echo brain.
sidecar = []
# Single-file `.tar` bundle packing for `opencompany export`/`import`. The
# port-driven export/import core (unpacked bundle directory) compiles without
# this; only `pack_tar`/`unpack_tar` are gated here.
export = ["dep:tar"]
# Recursive DNS resolution for custom-domain verification. The `DnsResolver`
# trait, the offline `StaticDnsResolver`, and the pure record generation compile
# without this; only `HickoryDnsResolver` is gated here.
dns = ["dep:hickory-resolver"]
# Real SMTP send for the domain/email surface. The `MailSender` trait and the
# offline `RecordingMailSender` compile without this; only `LettreMailSender` is
# gated here.
smtp = ["dep:lettre"]
# Real HTTPS transport to api.telegram.org for the Telegram channel
# (sendMessage / setWebhook). The `TelegramApi` trait, inbound parsing, token
# scrubbing, and the offline `RecordingTelegramApi` compile without this; only
# `HttpTelegramApi` is gated here (it needs the shared `reqwest` client).
telegram = ["dep:reqwest"]
# OAuth connection lifecycle (authorize-url + server-side token exchange). The
# read-only connections catalog compiles without this; only the token-exchanging
# write routes are gated here (they need the shared `reqwest` client).
oauth = ["dep:reqwest"]

[patch.crates-io]
# opencompany's own vendored tinyagents (1.8.0). Satisfies openhuman's `^1.7`.
tinyagents = { path = "vendor/tinyagents" }
# WS4: openhuman's own Cargo.toml `[patch.crates-io]` is ignored when it is a
# path dependency, so its vendored-submodule patches must be replicated here
# (paths rebased onto `vendor/openhuman/vendor/...`). These entries are inert in
# the default build — none of these crates are in the graph until the
# `openhuman` feature is on — so they leave the offline build unaffected.
tinyflows = { path = "vendor/openhuman/vendor/tinyflows" }
tinycortex = { path = "vendor/openhuman/vendor/tinycortex" }
tinyjuice = { path = "vendor/openhuman/vendor/tinyjuice" }
tinychannels = { path = "vendor/openhuman/vendor/tinychannels" }
tinyplace = { path = "vendor/openhuman/vendor/tinyplace/sdk/rust" }
whisper-rs-sys = { git = "https://github.com/tinyhumansai/whisper-rs-sys.git", branch = "main" }

[dev-dependencies]
tempfile = "3"
