[package]
name = "agentic-accounting-firm"
description = "Keeps books, files taxes, and forecasts."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Inherit the host crate from the parent workspace.
opencompany.workspace = true
