[package]
name = "agentic-consultation-firm"
description = "Delivers research-backed strategy and implementation plans."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Inherit the host crate from the parent workspace.
opencompany.workspace = true
