[package]
name = "agentic-customer-support"
description = "Resolves tickets and keeps documentation current."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Inherit the host crate from the parent workspace.
opencompany.workspace = true
