[package]
name = "agentic-enterprise-sales"
description = "Builds pipeline and moves deals through the funnel."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Inherit the host crate from the parent workspace.
opencompany.workspace = true
