[package]
name = "agentic-game-business"
description = "Runs LiveOps, user acquisition, and monetization for a game."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Inherit the host crate from the parent workspace.
opencompany.workspace = true
