[package]
name = "agentic-marketing-agency"
description = "Produces and runs campaigns across every channel."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Inherit the host crate from the parent workspace.
opencompany.workspace = true
