[package]
name = "agentic-pharma-startup"
description = "Reviews literature, discovers molecules, and plans trials."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Inherit the host crate from the parent workspace.
opencompany.workspace = true
