[package]
name = "agentic-realestate-company"
description = "Underwrites deals and manages properties."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Inherit the host crate from the parent workspace.
opencompany.workspace = true
