[package]
name = "agentic-recruiting-company"
description = "Sources, screens, and schedules candidates."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Inherit the host crate from the parent workspace.
opencompany.workspace = true
