[package]
name = "agentic-software-company"
description = "Designs, builds, ships, and supports an entire SaaS product."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Inherit the host crate from the parent workspace.
opencompany.workspace = true
