[package]
name = "agentic-venture-capital"
description = "Sources, evaluates, and supports venture investments."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Inherit the host crate from the parent workspace.
opencompany.workspace = true
