[package]
name = "signals-opportunity-studio"
description = "A venture studio that scouts signals and ranks opportunities for the operator."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Inherit the host crate from the parent workspace.
opencompany.workspace = true
