[package]
name = "startup-accelerator"
description = "Runs a cohort accelerator from sourcing to demo day."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Inherit the host crate from the parent workspace.
opencompany.workspace = true
